testsuite/tests/parser/should_fail/readFail036.stderr

readFail036.hs:6:16: error:
    Illegal kind signature: ‘Type’
      Perhaps you intended to use KindSignatures
    In the data type declaration for ‘Foo’
